# kcp-bulild

./: CMakeLists.txt  README.md  make_android.sh  make_ios.sh  make_linux32.sh  make_linux64.sh  make_osx.sh  make_uwp.bat  make_win32.bat  make_win64.bat
Plugins/kcp.bundle/Contents/MacOS/: kcp
Unity/: kcp.cs  kcp_output.cs
manual_build_ios/kcp/: ikcp.h  kcp.c
manual_build_ios/kcp.xcodeproj/: project.pbxproj
manual_build_ios/kcp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
manual_build_ios/kcp.xcodeproj/project.xcworkspace/xcuserdata/Chivas.xcuserdatad/: UserInterfaceState.xcuserstate
manual_build_ios/kcp.xcodeproj/project.xcworkspace/xcuserdata/mac2.xcuserdatad/: UserInterfaceState.xcuserstate
manual_build_ios/kcp.xcodeproj/xcuserdata/Chivas.xcuserdatad/xcschemes/: kcp.xcscheme
manual_build_ios/kcp.xcodeproj/xcuserdata/mac2.xcuserdatad/xcschemes/: kcp.xcscheme  xcschememanagement.plist
